# red-green-timer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/timer-core/: Cargo.toml
crates/timer-core/src/: engine.rs  error.rs  lib.rs  model.rs  state.rs
crates/timer-persistence/: Cargo.toml
crates/timer-persistence/migrations/: 0001_initial.sql
crates/timer-persistence/src/: error.rs  lib.rs  mapping.rs  model.rs  repository.rs  run_repository.rs  timer_repository.rs
crates/timer-persistence/tests/: repository_tests.rs
scripts/: codex-setup.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: application.rs  commands.rs  main.rs
src/lib/: api.ts  types.ts
