[package]
name = "red-green-timer"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timer-core = { path = "../crates/timer-core" }
timer-persistence = { path = "../crates/timer-persistence" }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
thiserror = "1"
