[package]
name = "timer-persistence"
version = "0.1.0"
edition.workspace = true

[dependencies]
timer-core = { path = "../timer-core" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
